// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/PostAddChannelMember should match snapshot, empty channelType 1`] = `<div />`;

exports[`components/post_view/PostAddChannelMember should match snapshot, empty postId 1`] = `<div />`;

exports[`components/post_view/PostAddChannelMember should match snapshot, more than 3 users 1`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
      <a
        class="PostBody_otherUsersLink"
      >
        2 others
      </a>
      <span>
        @username_4
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. Would you like to 
    <a
      class="PostBody_addChannelMemberLink"
    >
      add them to the channel
    </a>
    ? They will have access to all message history.
  </p>
</div>
`;

exports[`components/post_view/PostAddChannelMember should match snapshot, more than 3 users 2`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
      <a
        class="PostBody_otherUsersLink"
      >
        2 others
      </a>
      <span>
        @username_4
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. Would you like to 
    <a
      class="PostBody_addChannelMemberLink"
    >
      add them to the channel
    </a>
    ? They will have access to all message history.
  </p>
</div>
`;

exports[`components/post_view/PostAddChannelMember should match snapshot, private channel 1`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. Would you like to 
    <a
      class="PostBody_addChannelMemberLink"
    >
      add them to this private channel
    </a>
    ? They will have access to all message history.
  </p>
</div>
`;

exports[`components/post_view/PostAddChannelMember should match snapshot, public channel 1`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. Would you like to 
    <a
      class="PostBody_addChannelMemberLink"
    >
      add them to the channel
    </a>
    ? They will have access to all message history.
  </p>
</div>
`;

exports[`components/post_view/PostAddChannelMember should match snapshot, with ABAC policy enforced 1`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
      <span>
        @username_2
      </span>
      <span>
        @username_3
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel.
  </p>
</div>
`;

exports[`components/post_view/PostAddChannelMember should match snapshot, with no-groups usernames 1`] = `
<div>
  <p>
    <span>
      <span>
        @username_1
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. Would you like to 
    <a
      class="PostBody_addChannelMemberLink"
    >
      add them to the channel
    </a>
    ? They will have access to all message history.
  </p>
  <p>
    <span>
      <span>
        @user_id_2
      </span>
    </span>
     
    did not get notified by this mention because they are not in the channel. They cannot be added to the channel because they are not a member of the linked groups. To add them to this channel, they must be added to the linked groups.
  </p>
</div>
`;
